# chatbot_dashboard

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/: data.csv
model/: model.py
model/config/: config.py
model/processing/: data_manager.py  pipeline_qa.py
